--- a/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="DependencyResolution\StructureMapScopeModule.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CartTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
