--- a/SportsStore.Domain/packages.config
+++ b/SportsStore.Domain/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="jQuery" version="1.4.1" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.8" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net461" />
 </packages>
